--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/pngjs": "^6.0.4",
+    "pngjs": "^7.0.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
